--- a/user-interaction/index.html
+++ b/user-interaction/index.html
@@ -122,10 +122,10 @@
               <p>De esta manera, los mensajes se <strong>canalizan directamente hacia la administración</strong> temporalmente.</p>              
 
               <h4>🎬 Mira cómo activarla:</h4> 
-              <img src="res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
+              <a href="res/pause-restart-chat.gif" target="_blank"><img src="res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;"></a>
 
               <h4>💬 Mensaje que verá el propietario:</h4>
-              <img src="res/owner-message.jpeg" alt="Reactivar chat" height="70px" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
+              <img src="res/owner-message.jpeg" alt="Reactivar chat" style="width:70%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
 
               <br/>
               <p><i>💡 Esta función es completamente opcional y solo se aplica si tú decides activarla.</i></p>
