--- a/user-interaction/index.html
+++ b/user-interaction/index.html
@@ -122,7 +122,7 @@
               <p>De esta manera, los mensajes se <strong>canalizan directamente hacia la administración</strong> temporalmente.</p>              
 
               <h4>🎬 Mira cómo activarla:</h4> 
-              <a href="res/pause-restart-chat.gif" target="_blank"><img src="res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;"></a>
+              <a href="res/pause-restart-chat.mp4" target="_blank"><video src="res/pause-restart-chat.mp4" alt="pause-restart-chat"  autoplay muted loop style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;"></video></a>
 
               <h4>💬 Mensaje que verá el propietario:</h4>
               <img src="res/owner-message.jpeg" alt="Reactivar chat" style="width:70%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
