--- a/v1/open-in-browser/index.html
+++ b/v1/open-in-browser/index.html
@@ -93,6 +93,7 @@
     <tr>
       <td align="center">
 
+        <p style="text-align: center; font-size: 12px;">🌐 Ver en la web</p>
         <table class="container" cellpadding="0" cellspacing="0">
           <!-- Header / Logo con fondo negro -->
           <tr>
@@ -119,10 +120,13 @@
               
               <h4>⏸️ Nueva función “Pausar chat”</h4>
               <p>Al activarla, el propietario <strong>no podrá interactuar temporalmente en el chat.</strong></p> 
-              <p>De esta manera, los mensajes se <strong>canalizan directamente hacia la administración</strong> temporalmente.</p>              
+              <p>De esta manera, los mensajes se <strong>promueve el contacto directo con la administración</strong> temporalmente.</p>              
 
               <h4>🎬 Mira cómo activarla:</h4> 
-              <a href="res/pause-restart-chat.mp4" target="_blank"><video src="res/pause-restart-chat.mp4" alt="pause-restart-chat"  autoplay muted loop style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;"></video></a>
+              <a href="https://drive.google.com/file/d/1vhhLp5rKxF9rTMuWnDLlUA1nb8k8ChLQ/view?usp=sharing" target="_blank">
+                <img src="res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
+              </a>
+              <p style="text-align: center; font-size: 12px;">👆 Haz clic para abrir</p>
 
               <h4>💬 Mensaje que verá el propietario:</h4>
               <img src="res/owner-message.jpeg" alt="Reactivar chat" style="width:70%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
