--- a/v1/open-in-browser/index.html
+++ b/v1/open-in-browser/index.html
@@ -120,7 +120,7 @@
               
               <h4>⏸️ Nueva función “Pausar chat”</h4>
               <p>Al activarla, el propietario <strong>no podrá interactuar temporalmente en el chat.</strong></p> 
-              <p>De esta manera, los mensajes se <strong>promueve el contacto directo con la administración</strong> temporalmente.</p>              
+              <p>De esta manera, el mensaje que recibe el propietario <strong>motivará que se comunique directamente con la administración</strong> temporalmente.</p>      
 
               <h4>🎬 Mira cómo activarla:</h4> 
               <a href="https://drive.google.com/file/d/1vhhLp5rKxF9rTMuWnDLlUA1nb8k8ChLQ/view?usp=sharing" target="_blank">
