--- a/v1/open-in-browser/index.html
+++ b/v1/open-in-browser/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Seguimos mejorando para ti</title>
+<title>Seguimos mejorando para ti 🚀</title>
 <style>
   body, table, td, p {
     margin: 0;
@@ -86,6 +86,7 @@
     }
   }
 </style>
+<link rel="icon" href="https://jome.mx/favicon.ico" type="image/x-icon">
 </head>
 <body style="background-color:#f2f2f2; padding:20px;">
 
@@ -93,7 +94,7 @@
     <tr>
       <td align="center">
 
-        <p style="text-align: center; font-size: 12px;">🌐 Ver en la web</p>
+        <a href="https://jome-mx.github.io/email/v1/open-in-browser/index.html" target="_blank" style="text-decoration: none; color: inherit;"><p style="text-align: center; font-size: 12px;">🌐 Ver en la web</p></a>
         <table class="container" cellpadding="0" cellspacing="0">
           <!-- Header / Logo con fondo negro -->
           <tr>
@@ -124,12 +125,12 @@
 
               <h4>🎬 Mira cómo activarla:</h4> 
               <a href="https://drive.google.com/file/d/1vhhLp5rKxF9rTMuWnDLlUA1nb8k8ChLQ/view?usp=sharing" target="_blank">
-                <img src="res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
+                <img src="https://jome-mx.github.io/email/v1/open-in-browser/res/pause-restart-chat.gif" alt="pause-restart-chat" style="width:100%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
               </a>
               <p style="text-align: center; font-size: 12px;">👆 Haz clic para abrir</p>
 
               <h4>💬 Mensaje que verá el propietario:</h4>
-              <img src="res/owner-message.jpeg" alt="Reactivar chat" style="width:70%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
+              <img src="https://jome-mx.github.io/email/v1/open-in-browser/res/owner-message.jpeg" alt="Reactivar chat" style="width:70%; max-width:520px; border:1px solid #dddddd; border-radius:6px;">
 
               <br/>
               <p><i>💡 Esta función es completamente opcional y solo se aplica si tú decides activarla.</i></p>
