--- a/v1/open-in-browser/index.html
+++ b/v1/open-in-browser/index.html
@@ -99,7 +99,7 @@
           <!-- Header / Logo con fondo negro -->
           <tr>
             <td class="header">
-              <img src="https://jome.mx/img/logo_app.png" alt="Logo de la empresa">
+              <img src="https://jome.mx/img/logo_app.png" alt="Jome">
             </td>
           </tr>
 
